--- a/gateone/templates/themes/dark-black.css
+++ b/gateone/templates/themes/dark-black.css
@@ -221,7 +221,7 @@
     z-index:600;
     position:absolute;
     top:0;
-    right:1.6em;
+    right:1em;
     color: #fff;
     text-align: right;
 }
@@ -455,6 +455,63 @@ potential conflicts with other classes that may be on the page.
 #{{container}} .panel_close_icon:hover {
     opacity: 1;
     cursor:pointer;
+}
+.✈prefs_panel {
+    min-width: 60%;
+}
+.✈prefs_list {
+    float: left;
+    margin-right: .7em;
+}
+.✈save_button {
+    float: right;
+    clear: both;
+}
+.✈prefs_list ul {
+    list-style-type: none;
+/*     box-shadow: 2px 2px 4px #888; */
+    padding: 0;
+    margin: 0 auto;
+}
+.✈prefs_list li {
+    font-weight: bold;
+    border: 1px #fff solid;
+    padding: .5em;
+    -webkit-transition: -webkit-transform 0.25s ease-in-out;
+    -moz-transition: -moz-transform 0.25s ease-in-out;
+    -o-transition-property: -o-transform;
+    -o-transition-duration: 0.5s;
+    -o-transition-timing-function: ease-in-out;
+    -ms-transition: -ms-transform 0.5s ease-in-out;
+    transition: transform 0.5s ease-in-out;
+}
+.✈prefs_list li:after {
+    content: "❯";
+    padding-left: 1.5em;
+    float: right;
+}
+.✈prefs_list li:hover {
+    cursor: pointer;
+    background-color: #222;
+}
+.✈prefs_list .✈active {
+    background-color: #000;
+    background-image: linear-gradient(#000, #2A5BA6);
+    color: #fff;
+}
+.✈prefs_list .✈active:hover {
+    background-color: #2A5BA6;
+    color: #fff;
+}
+.✈prefs_content {
+    float: left;
+    width: 67%;
+}
+.✈sub1 li {
+    padding-left: 1.3em;
+}
+.✈sub1 li:before {
+    content: "⚡ ";
 }
 #{{container}} form { margin: 0 0 1em; }
 #{{container}} label {
